--- a/src/global.css
+++ b/src/global.css
@@ -22,7 +22,7 @@
     --deletion100: #F2545BFF;
     --deletion75: #F2545BBF;
     --deletion25: #F2545B40;
-    --deletion1A: #F2545B1A;
+    --deletion10: #F2545B1A;
     --deletiondark: #CF4046;
 
     --white: #FFFFFF;
